--- a/facturar.html
+++ b/facturar.html
@@ -45,7 +45,7 @@
         <div class="form-group  mt-0">
           <div class="input-group">
             <div class="input-group">
-              <input type="text" id="nit" class="form-control" placeholder="Nit">
+              <input type="text" id="nit" class="form-control" placeholder="NIT">
             </div>
           </div>
         </div>
