--- a/facturar.html
+++ b/facturar.html
@@ -101,6 +101,12 @@
 <script src="assets/js/plugins.min.js"></script>
 <script src="assets/js/app.min.js"></script>
 <script src="assets/js/index.js"></script>
+<script>
+  setTimeout(()=>{
+    $(".ms-preload").hide(100);
+    $(".ms-site-container").fadeIn(1000);
+  },2500);
+</script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
 <script src="js/facturar.js"></script>
 <style>
